media/css/zamboni/discovery-pane.css
/* ... */
.addons li > a:hover,
.addons li > a:focus,
.addons li > a:active,
.rec-addons li > a:hover,
.rec-addons li > a:focus,
.rec-addons li > a:active {
    border-color: rgba(165,175,185,1);
    box-shadow: inset 0 -2px 0 rgba(58,78,103,0.1), 0 2px 0 rgba(190,210,230,0.85);
    -moz-transition-property: border-color, box-shadow;
    -moz-transition-duration: 0.1s;
    -moz-transition-timing-function: ease-out;
    text-decoration: none;
}

.addons h3,
.rec-addons h3 {
    font-size: 14px;
    line-height: 1.1;
    font-weight: bold;
    font-family: inherit;
    margin: .25em 0;
}

.addons li > a:hover h3,
.addons li > a:focus h3,
.addons li > a:active h3,
.rec-addons li > a:hover h3,
.rec-addons li > a:focus h3,
.rec-addons li > a:active h3 {
    text-decoration: underline;
}

.addons p.desc,
.rec-addons p.desc {
    -moz-box-flex: 1;
    overflow: hidden;
    font-size: 11px;
    text-align: left;
    color: #373d48;
    margin: 0;
}

.html-rtl .addons p.desc,
.html-rtl .rec-addons p.desc {
    text-align: right;
}

.addons img,
.rec-addons img {
    max-width: 50px;
}

/* @group Top Add-ons and Featured Personas */
#sub .featured {
    position: relative;
}

#recs .header,
#sub .featured h2,
#more-ways h2 {
    margin: -10px -10px 0;
    padding: 0.45em 10px;
    background: -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
    box-shadow: inset 0 -3px 0 rgba(58,78,103,0.05), 0 3px 0 rgba(175,195,220,.3);
    border-radius: 8px 8px 0 0;
    border-bottom: 1px solid #a8b8d1;
    overflow: hidden;
}

#recs .header {
    margin: 0;
    padding: 0.45em 0;
    width: 100%;
}

#sub .featured ul,
#more-ways ul {
    margin: 0 0 -10px;
}

#sub .featured li,
#more-ways li {
    border-bottom: 1px solid #cdd4de;
    margin: 0 -10px;
    clear: both;
}
#sub #featured-personas li {
    border-bottom-color: #666;
}
#sub .featured li:last-child,
#more-ways ul li:last-child {
    border-bottom-width: 0;
}

#sub .featured li,
#sub #featured-personas li h6,
#more-ways li {
    font-size: 13px;
}

#sub .featured li a {
    text-decoration: none;
}

#sub #top-addons ul a.addon-title,
#sub #featured-personas ul span.addon-title {
    display: block;
    overflow: hidden;
    background: rgba(255,255,255,0.35) url("../../img/zamboni/discovery_pane/arrow-right.png") 95% 50% no-repeat;
    color: #333;
}

#sub #top-addons ul a.addon-title,
#sub #featured-personas ul span.addon-title b {
    display: block;
    padding: 0.5em 30px 0.5em 10px;
}

#sub #featured-personas ul span.addon-title b {
    font-weight: normal;
}

#sub #featured-personas ul span.addon-title {
    background-color: rgba(255,255,255,0.65);
    border-top: 1px solid rgba(255,255,255,0.35);
    text-decoration: none;
    position: absolute;
    bottom: 0;
    width: 100%;
}

#sub #top-addons ul a.addon-title:hover,
#sub #top-addons ul a.addon-title:focus,
#sub #top-addons ul a.addon-title:active,
#sub #featured-personas ul a:hover span.addon-title,
#sub #featured-personas ul a:focus span.addon-title,
#sub #featured-personas ul a:active span.addon-title {
    background-color: rgba(255,255,255,0.65);
    background-position: 96% 50%;
    -moz-transition-property: background-color, background-position;
    -moz-transition-duration: 0.1s;
    -moz-transition-timing-function: ease-out;
    color: #083681;
}

#sub #featured-personas ul a:hover span.addon-title,
#sub #featured-personas ul a:focus span.addon-title,
#sub #featured-personas ul a:active span.addon-title {
    background-color: rgba(255,255,255,0.8);
}

#sub .featured ul li:last-child a,
#sub #featured-personas ul li:last-child a span.addon-title {
    border-radius: 0 0 8px 8px;
}

#top-addons ul a img {
    vertical-align: middle;
    margin: 0 8px 0 0;
}

#sub .featured .all,
#recs .header h2 a {
    line-height: 24px;
    font-size: 13px;
}

#sub .featured .all {
    display: block;
    float: right;
}

#recs .header h2 a {
    display: inline-block;
    margin-left: 10px;
}
.html-rtl #recs .header h2 a {
    float: left;
    height: 18px;
    line-height: 25px;
    margin: 0 10px 0 0;
}

/* @end */

/* @group Personas */
.persona-preview {
    display: block;
    position: relative;
    line-height: 1;
}
.persona-preview [data-browsertheme] {
    display: block;
    position: relative;
}
.pane .persona-large .persona-preview [data-browsertheme] {
    background-position: 100% 50%;
    height: 60px;
}
.detail .persona-large {
    -moz-box-shadow: 0 1px 3px rgba(0,0,0,.15);
    width: 680px;
}
.detail .persona-large .persona-preview [data-browsertheme] {
    background: transparent no-repeat left top;
    border: 1px solid #a9a9a9;
    height: 100px;
}
.detail .persona-hover.persona-large .persona-preview [data-browsertheme] {
    border-color: #666;
}
/* @end */

/* @More ways to customize *********/
#more-ways ul {
    font-size: 13px;
    clear: right;
}

#more-ways ul a {
    display: block;
    padding: 12px 30px 10px 12px;
    min-height: 45px;
    background: rgba(255,255,255,0.1) url("../../img/zamboni/discovery_pane/arrow-right.png") 95% 8px no-repeat;
    color: #333;
    text-decoration: none;
    text-shadow: 0 0 1px #fff;
}

#more-ways ul a:hover,
#more-ways ul a:focus,
#more-ways ul a:active {
    background-position: 96% 8px;
    background-color: rgba(255,255,255,0.5);
    -moz-transition-property: background-position, background-color;
    -moz-transition-duration: 0.1s;
    -moz-transition-timing-function: ease-out;
    color: #083681;
}

#more-ways #more-addons {
    background: transparent url("../../img/zamboni/discovery_pane/bg-moreaddons.jpg") 95% 50% no-repeat;
}

#more-ways #more-personas {
    background: transparent url("../../img/zamboni/discovery_pane/bg-morepersonas.jpg") 70% 50% no-repeat;
    border-radius: 0 0 8px 8px;
}
/* ... */

